--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <section>
                 <h3>Formação</h3>
                 <p>
-                    Ensino Superior (em  Andamento – 6° semestre) – UNIVESP (Ano de conclusão: 06/2025)         </p>
+                    Ensino Superior - Bacharelado em Ciência de Dados (em  Andamento – 6° semestre) –Fundação Universidade Virtual do Estado de São Paulo - UNIVESP (Ano de conclusão: 06/2025)         </p>
             </section>
             <br>
             <section>
@@ -203,7 +203,8 @@
                     Inglês (básico)
                 </p>
                 <p>
-                    Espanhol (básico)
+                    Espanhol (básico)
+
                 </p>  
             </section>    
         </main>
